--- a/Tubac_F2/Tubac_F2.vbproj
+++ b/Tubac_F2/Tubac_F2.vbproj
@@ -77,6 +77,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BatchsFase2.Designer.vb">
+      <DependentUpon>BatchsFase2.vb</DependentUpon>
+    </Compile>
+    <Compile Include="BatchsFase2.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Conexion.vb" />
     <Compile Include="cParametros.Designer.vb">
       <DependentUpon>cParametros.vb</DependentUpon>
@@ -120,6 +126,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="BatchsFase2.resx">
+      <DependentUpon>BatchsFase2.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="cParametros.resx">
       <DependentUpon>cParametros.vb</DependentUpon>
     </EmbeddedResource>
